kubernetes/sabnzbd/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: sabnzbd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          ports:
          - name: http
            containerPort: 8080
          volumeMounts:
          - name: sabnzbd-config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
          - name: downloads
            mountPath: /incomplete-downloads
            subPath: incomplete
          # - name: sabnzbd-config-ini
          #   mountPath: /config/sabnzbd.ini
          #   subPath: sabnzbd.ini
          #   readOnly: true
      volumes:
        - name: downloads
          nfs:
            server: 10.15.21.132
            path: /mnt/user/archives/websites/usenet
            readOnly: false
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-pvc
            readOnly: false
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-pvc
            readOnly: false
        - name: sabnzbd-config-ini
          configMap:
            name: sabnzbd-config
            # optional: only if you want to mount that one key
            items:
            - key: sabnzbd.ini
              path: sabnzbd.ini
