kubernetes/sabnzbd/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: sabnzbd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: sabnzbd.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd-web
                port:
                  number: 8080
  tls:
    - hosts:
        - sabnzbd.kube-prod-d1.mclacken.net
      secretName: sabnzbd-certificate-secret
